kubernetes/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  labels:
    app: streamlit-incendies
spec:
  selector:
    app: streamlit-incendies
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8501
