kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incendies-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api-incendies-troussaux.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: incendies-service
            port:
              number: 80
  tls:
  - hosts:
    - api-incendies-troussaux.lab.sspcloud.fr
